# RayTracing

./: .gitignore  CMakeLists.txt  README.md  balls.txt  base.cpp  base.hpp  classes.hpp  image.cpp  input.txt  inputs.txt  leitura.txt  main.cpp  phong.hpp  red_ball.txt  redball.txt  rotation.cpp  scenes.cpp  scenes.hpp  screen.hpp  teste_input.txt  three_balls.txt  transformations.hpp
images/: IMAGESHERE.txt
include/entity/: plane.hpp  sphere.hpp
include/geometry/: vector.hpp
src/entity/: plane.cpp  sphere.cpp
src/geometry/: vector.cpp
tests/: ball_shadow.txt  spheres_plane.txt  triangle_rotation.txt  triangulo.txt  triangulo_cores.txt  triangulos.txt
